Checkpoint - Handle different tempos, update ocarina sf and use transformers